--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 html,
 body {
   width: 100%;
-  height: 100%; }
+  height: 100%; 
+}
 
-body {
-  font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif'; }
+h5, h6 {
+  font-family: sofia-pro, "Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-synthesis: none;
+  -moz-font-feature-settings: 'kern';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 a {
   color: #fdcc52;
@@ -13,6 +19,27 @@ a {
   transition: all .35s; }
   a:hover, a:focus {
     color: #fcbd20; }
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: titling-gothic-fb, sans-serif;
+  letter-spacing: 1px; }
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px; }
+
+h6 {
+  font-size: 12px;
+  text-transform: uppercase; 
+  line-height: 1.16667;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
 
 hr {
   max-width: 100px;
@@ -23,20 +50,7 @@ hr {
 hr.light {
   border-color: white; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
-  letter-spacing: 1px; }
-
-p {
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 20px; }
+}
 
 section {
   padding: 100px 0; }
@@ -65,7 +79,7 @@ section {
     color: #222222; }
   #mainNav .navbar-nav > li > a {
     font-size: 11px;
-    font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+    font-family: sofia-pro, "Helvetica Neue","Helvetica","Arial",sans-serif;
     letter-spacing: 2px;
     text-transform: uppercase; }
     #mainNav .navbar-nav > li > a.active {
@@ -113,9 +127,7 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430); }
+  background: #D48973; }
   header.masthead .header-content {
     max-width: 500px;
     margin-bottom: 100px;
@@ -141,6 +153,36 @@ header.masthead {
           font-size: 50px; }
       header.masthead .device-container {
         max-width: 325px; } }
+
+.hero {
+  float: right;
+  width: 865px;
+  height: 777.1px;
+  background-size: 865px 777.1px;
+  background-repeat: no-repeat;
+  background-image: url(/img/misfitsherodraft.png);
+}
+
+.modal-dialog {
+      max-width: 800px;
+      margin: 30px auto;
+  }
+
+.modal-body {
+  position:relative;
+  padding:0px;
+}
+.close {
+  position:absolute;
+  right:-30px;
+  top:0;
+  z-index:999;
+  font-size:2rem;
+  font-weight: normal;
+  color:#fff;
+  opacity:1;
+}
+
 
 section.download {
   position: relative;
@@ -270,6 +312,9 @@ footer {
       color: rgba(255, 255, 255, 0.3); }
       footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li a.active {
         text-decoration: none; }
+.iconify {
+  margin-left: 4px;
+}
 
 .bg-primary {
   background: #fdcc52;
@@ -293,8 +338,7 @@ footer {
     background-color: #fdcc52; }
 
 .btn {
-  border-radius: 300px;
-  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+  font-family: sofia-pro, sans-serif;
   letter-spacing: 2px;
   text-transform: uppercase; }
 
