modifying the testimonials so to not be template-y, randomized logos in nav (need to change colour not when transparent)

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,20 @@ body {
   height: 100%; 
 }
 
+@font-face {
+  font-family: 'F37 Jan';
+  src: url('/fonts/F37Jan-Regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/F37Jan-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/F37Jan-Regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/F37Jan-Regular.woff2') format('woff2'), /* Modern Browsers */
+       url('/fonts/F37Jan-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/F37Jan-Regular.svg#6f19de2552131dbb6612d8d86b4c9c6b') format('svg'); /* Legacy iOS */
+       
+  font-style:   normal;
+  font-weight:  400;
+}
 h5, h6 {
-  font-family: sofia-pro, "Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: 'F37 Jan', "Helvetica Neue","Helvetica","Arial",sans-serif;
   font-synthesis: none;
   -moz-font-feature-settings: 'kern';
   -webkit-font-smoothing: antialiased;
@@ -55,7 +67,7 @@ hr.light {
 section {
   padding: 100px 0; }
   section h2 {
-    font-size: 50px; }
+    font-size: 40px; }
 
 #mainNav {
   border-color: rgba(34, 34, 34, 0.05);
@@ -150,7 +162,7 @@ header.masthead {
         margin-bottom: 0;
         text-align: left; }
         header.masthead .header-content h1 {
-          font-size: 50px; }
+          font-size: 40px; }
       header.masthead .device-container {
         max-width: 325px; } }
 
@@ -204,6 +216,65 @@ section.download {
   @media (min-width: 768px) {
     section.download h2 {
       font-size: 70px; } }
+     
+.col-center {
+  margin: 0 auto;
+  float: none !important;
+}
+.carousel {
+  margin: 50px auto;
+  padding: 0 70px;
+}
+.carousel .item .img-box {
+  width: 135px;
+  height: 135px;
+  margin: 0 auto;
+  padding: 5px;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+.carousel .img-box img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
+}
+.carousel .testimonial {
+  padding: 30px 0 10px;
+}
+.carousel .overview { 
+  font-style: italic;
+}
+.carousel .overview b {
+  text-transform: uppercase;
+  color: #7AA641;
+}
+.carousel .carousel-control {
+  width: 40px;
+    height: 40px;
+    margin-top: -20px;
+    top: 50%;
+  background: none;
+}
+.carousel-control i {
+  font-size: 68px;
+  line-height: 42px;
+  position: absolute;
+  display: inline-block;
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
+}
+.carousel .carousel-indicators {
+  bottom: -70px;
+}
+.carousel-indicators li, .carousel-indicators li.active {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    cursor: pointer;
+    background-color: black;
+}
 
 section.features .section-heading {
   margin-bottom: 100px; }
