--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 box-sizing: border-box;
 }
-*, *:before, *:after {
+*i, *:before, *:after {
   box-sizing: inherit;
 }
 
@@ -18,6 +18,31 @@ box-sizing: border-box;
        url("../fonts/FoundersGroteskWeb-Semibold.woff2") format('woff2'), /* Modern Browsers */
  /* Legacy iOS */
   font-weight: bold;
+}
+
+input, input[type="password"], input[type="search"],input[type=text] {
+    border: 0;
+    box-shadow: none!important;
+    -webkit-appearance:none!important;
+    -moz-appearance:none!important;
+    -ms-appearance:none!important;
+    -o-appearance:none!important;
+    appearance: none;
+    outline: none!important;
+    border:none !important;
+    background: #f8c3a8!important;
+    font-weight: bold;
+    width: 100%!important;
+   margin: 5px 0px;
+   height: 45px;
+   padding: 6px 15px;
+   border-radius: 5px;
+   outline: none;
+   border: none;
+   background: #F6F7F9;
+   color: #748194;
+   font-size: 14px;
+
 }
 
 /*@font-face {
@@ -92,6 +117,19 @@ hr.light {
   border-color: white; }
 
 }
+
+#mce-FNAME, #mce-LNAME {
+    width: 5px;
+   
+} 
+
+@media screen and (max-width: 600px) {
+  .game-box-container, .hero {
+    visibility: hidden;
+    clear: both;
+    display: none;
+  }
+}   
 
 section {
   padding: 100px 0; }
@@ -185,7 +223,6 @@ header.masthead {
 
 }
 
-
 .hero {
   float: left;
   background-image: url('../img/r_Misfits_30082019_Shot_8_544_cropped.jpg');
@@ -194,22 +231,24 @@ header.masthead {
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position-x: -50px;
 }
 
 .game-box-container {
-  float: right;
-  width: 50%;
+  float:right;
+  width: 40%;
   margin: 0 auto;
   padding-right:0;
+  padding-bottom: 30px;
   text-align: right;
 }
 
 .game-box-container img {
-  width: 80%;
+  width: 90%;
 /* Required to make image fluid in IE */
 
 img:not(.png) {
-  width: 75%;
+  height: 90%;
 } 
 
 }
@@ -220,7 +259,7 @@ img:not(.png) {
 }
 
 .subhead{
- float:left;
+
  margin-bottom:20px;
 }
 
@@ -250,11 +289,23 @@ img:not(.png) {
 
 
 .header-content{
+  float: left;
   color: #f8c3a8;
   position: relative;
   bottom:0;
   left: 0;
   padding:0;
+  border: 0;
+  margin-bottom:10px;
+    box-shadow: none;
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    -o-appearance:none;
+    appearance: none;
+  outline: none!important; 
+  background-color:transparent !important;
+       border:none !important;
 
 }
 
@@ -322,7 +373,7 @@ float: left;
 section.download {
   position: relative;
   width: 100%;
-  height: 120vh;
+  height: 130vh;
 }
   section.download h2 {
     font-size: 50px;
@@ -340,7 +391,7 @@ section.download {
         margin-bottom: 0; } }
   @media (min-width: 768px) {
     section.download {
-      padding: 20vh 20vh 40vh 20vh;
+      padding: 15vh 20vh 20vh 20vh;
     }
     section.download h2 {
       font-size: 70px; } }
