--- a/css/style.css
+++ b/css/style.css
@@ -458,16 +458,6 @@ img:not(.png) {
             margin-top: 5px;
         }
 
-        #slider .arrows a {
-            position: absolute;
-            text-decoration: none;
-            color: rgba(255, 255, 255, 0.65);
-            top: 43%;
-            left: 15px;
-            font-weight: 400;
-            line-height: 1;
-            font-size: 42px;
-        }
 
         #slider .arrows a:hover {
             color: #fff;
@@ -595,7 +585,7 @@ transform: scale(-1, 1);
 /* Number sliderText (1/3 etc) */
 
 /* The sliderDots/bullets/indicators */
-.sliderDot {
+#sliderDot {
   cursor: pointer;
   height: 8px;
   width: 8px;
@@ -607,9 +597,15 @@ transform: scale(-1, 1);
 }
 
 
-.active, .sliderDot:hover {
+.active{
+background-color: red!important;
+}
+
+#sliderDot:hover {
   background-color: #717171;
 }
+
+
 
 /* Fading animation */
 .fade {
